@@ -48,18 +48,23 @@ dependencies {
     testImplementation(SdkHelperKt.getSdkDependency(project))
 }
 
-tasks.withType(KotlinCompile).configureEach {
-    kotlinOptions {
-        freeCompilerArgs += [
+tasks.withType(KotlinCompile).configureEach { task ->
+    task.compilerOptions {
+        it.freeCompilerArgs.addAll(
                 "-opt-in=androidx.room.compiler.processing.ExperimentalProcessingApi",
                 "-opt-in=com.squareup.kotlinpoet.javapoet.KotlinPoetJavaPoetPreview"
-        ]
+        )
     }
 }
 
 tasks.withType(Test).configureEach {
     // https://github.com/google/compile-testing/issues/222
     it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
 }
 
 androidx {
